--- a/_layouts/partiture_folder.html
+++ b/_layouts/partiture_folder.html
@@ -26,9 +26,9 @@
     </div>
 
     <!-- Подключаем jQuery ПЕРЕД jstree -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!--  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
     <!-- Или подключите локальную копию jQuery, если предпочитаете -->
-    <!-- <script src="{{ '/assets/js/jquery-3.6.0.min.js' | relative_url }}"></script> -->
+    <script src="{{ '/assets/js/jquery.min.js' | relative_url }}"></script> 
 
     <script src="{{ '/assets/js/jstree/jstree.min.js' | relative_url }}"></script>
 
